# camera-app

./: README.md  gradle.properties  settings.gradle.kts
.github/workflows/: android-build.yaml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  color_grade.c  denoise.c  doc_scan.c  doc_warp.c  histogram.c  jni_bridge.c  portrait_blur.c  sharpen.c  tone_curve.c  zoom_smooth.c
app/src/main/java/com/replit/cameraapp/: DocumentEdgeAnalyzer.kt  MainActivity.kt  NativeImaging.kt  SettingsPreferences.kt  SettingsScreen.kt
gradle/: libs.versions.toml
